# Jodes

./: .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  LICENSE  README.md  TESTING.md
App/: App.cpp  CMakeLists.txt  benchmark.cpp  test.cpp  worker.cpp
App/include/: App.h  CurlClient.h  EchoHandler.h  GlobalTable.h  LocalTable.h  Operators.h  ReqSender.h  Tuple.h  log.h  ocalls.h  utils.h
App/src/: CurlClient.cpp  EchoHandler.cpp  EchoServer.cpp  GlobalTable.cpp  LocalTable.cpp  ReqSender.cpp  Tuple.cpp  ocalls.cpp
App/src/utils/: log.cpp  utils.cpp
Enclave/: CMakeLists.txt  Enclave.cpp  Enclave.h  LocalTable.cpp  LocalTable.h  Obliv.cpp  Obliv.h  Operators.h  Tuple.cpp  Tuple.h  define.h
Enclave/config/: Enclave.config.xml  Enclave.edl
Enclave/utils/: log.cpp
cmake/: FindSGX.cmake  FindSodium.cmake
config/: benchmark.ini  config.ini
data/: .gitignore  test  test_expansion_p0  test_expansion_p1  test_expansion_p2  test_expansion_p3  test_join_r_p0  test_join_r_p1  test_join_r_p2  test_join_r_p3  test_join_s_p0  test_join_s_p1  test_join_s_p2  test_join_s_p3  test_large_p2  test_p0  test_p1  test_p2  test_p3  test_p4  test_pkjoin_r_p0  test_pkjoin_r_p1  test_pkjoin_r_p2  test_pkjoin_r_p3  test_pkjoin_s_p0  test_pkjoin_s_p1  test_pkjoin_s_p2  test_pkjoin_s_p3
